working on chp 3

--- a/thesis/content/abbreviations.tex
+++ b/thesis/content/abbreviations.tex
@@ -1,23 +1,25 @@
+\abbrev{AI}   {Artificial Intelligence}
 \abbrev{TT}   {Thought Technology}
+\abbrev{AV}   {Arousal/Valence}
+\abbrev{HR}   {Heart Rate}
+\abbrev{HF}   {High-frequency}
 \abbrev{GSR}  {Galvanic Skin Response}
 \abbrev{EMG}  {Electromyography}
 \abbrev{EKG}  {Electrocardiography}
 \abbrev{ECG}  {Electrocardiography}
-\abbrev{HF}   {High-frequency}
-\abbrev{HR}   {Heart Rate}
 \abbrev{HRV}  {Heart Rate Variability}
 \abbrev{BVP}  {Blood Volume Pulse}
 \abbrev{EDA}  {Electrodermal Activity}
 \abbrev{HCI}  {Human Computer Interaction}
-\abbrev{AV}   {Arousal/Valence}
 \abbrev{NPC}  {Non-Player Character}
 \abbrev{Mod}  {Modification}
 \abbrev{CSV}  {Camma Separated Values}
 \abbrev{SAM}  {Self-Assessment-Manikin}
-\abbrev{PENS} {Player Experience of Need Satisfaction}
 \abbrev{IMI}  {Intrinsic Motivation Inventory}
 \abbrev{GEQ}  {Game Engagement/Experience Questionnaire}
 \abbrev{ICU}  {Intensive Care Unit}
 \abbrev{FPS}  {First-Person Shooter}
 \abbrev{EDR}  {Electrodermal Response}
 \abbrev{EDA}  {Electrodermal Activity}
+\abbrev{RTS}  {Real-Time Strategy}
+\abbrev{PENS} {Player Experience of Need Satisfaction}
