--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -572,3 +572,144 @@
   year={2007},
   publisher={ACM}
 }
+@book{champandard2003ai,
+  title={AI game development: Synthetic creatures with learning and reactive behaviors},
+  author={Champandard, Alex J},
+  year={2003},
+  publisher={New Riders}
+}
+@inproceedings{olesen2008real,
+  title={Real-time challenge balance in an RTS game using rtNEAT},
+  author={Olesen, Jacob Kaae and Yannakakis, Georgios N and Hallam, John},
+  booktitle={Computational Intelligence and Games, 2008. CIG'08. IEEE Symposium On},
+  pages={87--94},
+  year={2008},
+  organization={IEEE}
+}
+@incollection{xiang2013dynamic,
+  title={Dynamic Difficulty Adjustment by Facial Expression},
+  author={Xiang, Nan and Yang, Lili and Zhang, Mingmin},
+  booktitle={Informatics and Management Science V},
+  pages={761--768},
+  year={2013},
+  publisher={Springer}
+}
+@incollection{lee2006dynamic,
+  title={Dynamic game level design using gaussian mixture model},
+  author={Lee, Sangkyung and Jung, Keechul},
+  booktitle={PRICAI 2006: Trends in Artificial Intelligence},
+  pages={955--959},
+  year={2006},
+  publisher={Springer}
+}
+@incollection{chiu2008using,
+  title={Using data mining for dynamic level design in games},
+  author={Chiu, Kitty SY and Chan, Keith CC},
+  booktitle={Foundations of Intelligent Systems},
+  pages={628--637},
+  year={2008},
+  publisher={Springer}
+}
+@inproceedings{spronck2004difficulty,
+  title={Difficulty scaling of game AI},
+  author={Spronck, Pieter and Sprinkhuizen-Kuyper, Ida and Postma, Eric},
+  booktitle={Proceedings of the 5th International Conference on Intelligent Games and Simulation (GAME-ON 2004)},
+  pages={33--37},
+  year={2004}
+}
+@inproceedings{andrade2005challenge,
+  title={Challenge-sensitive game balancing: an evaluation of user satisfaction},
+  author={Andrade, Gustavo and Geber Ramalho, Alex S and Gomes, Ro and Corruble, Vincent},
+  booktitle={In Proceedings of the 4rd Brazilian Workshop on Computer Games and Digital Entertainment (WJogos05},
+  year={2005},
+  organization={Citeseer}
+}
+@inproceedings{gilleade2004using,
+  title={Using frustration in the design of adaptive videogames},
+  author={Gilleade, Kiel M and Dix, Alan},
+  booktitle={Proceedings of the 2004 ACM SIGCHI International Conference on Advances in computer entertainment technology},
+  pages={228--232},
+  year={2004},
+  organization={ACM}
+}
+@inproceedings{hunicke2004ai,
+  title={AI for dynamic difficulty adjustment in games},
+  author={Hunicke, Robin and Chapman, Vernell},
+  booktitle={Challenges in Game Artificial Intelligence AAAI Workshop},
+  pages={91--96},
+  year={2004}
+}
+@incollection{westra2009adaptive,
+  title={Adaptive serious games using agent organizations},
+  author={Westra, Joost and van Hasselt, Hado and Dignum, Frank and Dignum, Virginia},
+  booktitle={Agents for Games and Simulations},
+  pages={206--220},
+  year={2009},
+  publisher={Springer}
+}
+@inproceedings{hom2007automatic,
+  title={Automatic design of balanced board games},
+  author={Hom, Vincent and Marks, Joe},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence and Interactive Digital Entertainment (AIIDE)},
+  pages={25--30},
+  year={2007}
+}
+@ARTICLE{forbus2002ai, 
+  author={Forbus, K.D. and Laird, J.}, 
+  journal={Intelligent Systems, IEEE}, 
+  title={AI and the entertainment industry}, 
+  year={2002}, 
+  month={July}, 
+  volume={17}, 
+  number={4}, 
+  pages={15-16}, 
+  keywords={Artificial intelligence;Computational modeling;Computer industry;Computer science;Computer science education;Hardware;Humans;Intelligent systems;Toy industry;Visualization}, 
+  doi={10.1109/MIS.2002.1024746}, 
+  ISSN={1541-1672},
+}
+@article{weibel2008playing,
+  title={Playing online games against computer-vs. human-controlled opponents: Effects on presence, flow, and enjoyment},
+  author={Weibel, David and Wissmath, Bartholom{\"a}us and Habegger, Stephan and Steiner, Yves and Groner, Rudolf},
+  journal={Computers in Human Behavior},
+  volume={24},
+  number={5},
+  pages={2274--2291},
+  year={2008},
+  publisher={Elsevier}
+}
+@misc{wiki2014facial,
+  author={Wikipedia},
+  title={Facial electromyography --- {W}ikipedia{,} The Free Encyclopedia},
+  year={2014},
+  url={http://en.wikipedia.org/wiki/Facial_electromyography},
+  howpublished="\url{http://en.wikipedia.org/wiki/Facial_electromyography}",
+  note={[Online; accessed 21-May-2014]}
+}
+@misc{wiki2014gsr,
+  author={Wikipedia},
+  title={Skin conductance --- {W}ikipedia{,} The Free Encyclopedia},
+  year={2014},
+  url={http://en.wikipedia.org/wiki/Galvanic_Skin_Response},
+  howpublished="\url{http://en.wikipedia.org/wiki/Galvanic_Skin_Response}",
+  note={[Online; accessed 21-May-2014]}
+}
+@misc{wiki2014bvp,
+  author={Wikipedia},
+  title={Heart rate --- {W}ikipedia{,} The Free Encyclopedia},
+  year={2014},
+  url={http://en.wikipedia.org/wiki/Heart_rate},
+  howpublished="\url{http://en.wikipedia.org/wiki/Heart_rate}",
+  note={[Online; accessed 21-May-2014]}
+}
+@article{saari2005towards,
+  title={Towards emotionally adapted games based on user controlled emotion knobs},
+  author={Saari, Timo},
+  year={2005}
+}
+@ONLINE{onlin2014bartle,
+  author={Bartle, Richard},
+  title={HEARTS, CLUBS, DIAMONDS, SPADES: PLAYERS WHO SUIT MUDS {@ONLINE}},
+  month=may,
+  year={2014},
+  url={http://mud.co.uk/richard/hcds.htm}
+}
