--- a/thesis/content/chp-2-emotion.tex
+++ b/thesis/content/chp-2-emotion.tex
@@ -113,7 +113,7 @@ Galvanic skin response can be measured by looking at changes of galvanic skin re
 
 \img
 {Galvanic Skin Response (GSR) Signal}
-{Galvanic Skin Response (GSR) Signal}
+{Galvanic Skin Response (GSR) Signal ~\cite{wiki2014gsr}}
 {gsr-signal.pdf}
 {gsr-signal}
 
@@ -128,7 +128,7 @@ On an ECG the heart rate is measured using the R wave to R wave interval (RR int
 
 \img
 {EKG RR Interval}
-{EKG RR Interval}
+{EKG RR Interval ~\cite{wiki2014bvp}}
 {ekg-rr-interval.pdf}
 {ekg-rr-interval}
 
@@ -161,6 +161,12 @@ p Facial Electromyography (fEMG) refers to an electromyography (EMG) technique t
 p It primarily focuses on two major muscle groups in the face, the corrugator supercilii group which is associated with frowning and the zygomaticus major muscle group which is associated with smiling.[1][2]
 
 p Facial EMG has been studied to assess its utility as a tool for measuring emotional reaction.[3] Studies have found that activity of the corrugator muscle, which lowers the eyebrow and is involved in producing frowns, varies inversely with the emotional valence of presented stimuli and reports of mood state. Activity of the zygomatic major muscle, which controls smiling, is said to be positively associated with positive emotional stimuli and positive mood state.
+
+\img
+{Facial muscles associated with frowning and smiling}
+{On left side: Corrugator supercilii muscle (associated with frowning), on right side: Zygomaticus major muscle (associated with smiling) ~\cite{wiki2014facial}}
+{emg-facial-muscles.png}
+{emg-facial-muscles}
 
 p Facial EMG has been used as a technique to distinguish and track positive and negative emotional reactions to a stimulus as they occur.[4] A large number of those experiments have been conducted in controlled laboratory environments using a range of stimuli, e.g., still pictures, movie clips and music pieces.
 
