--- a/thesis/content/chp-3-video-games.tex
+++ b/thesis/content/chp-3-video-games.tex
@@ -33,14 +33,15 @@ Flow zone is an inspiring concept in flow theory and is illustrated in figure ~\
 
 \img
 {Flow zone}
-{Flow zone}
+{Flow zone, the area where challenge and skill level match.}
 {flow-zone.pdf}
 {flow-zone}
 
-As far as the content and premise of the activity is inherently appealing to the audience, the design of the interactive experience, such as video games, boils down to keeping the user or the player in the flow zone throughout the activity. While playing a video game gradually increases player's skill level, the designer should increase the required skill level by changing the challenge level of the game at the same pace to keep the player in the flow zone. Though this gradual acquiring of skills happens differently in different individuals. In fact designing such a balance between the challenge and skill level becomes a greater and greater challenge for the designer as the size of the targeted audience grows. For example when designing a game for kids, this balance would have a wholly different rate of change than when designing it for adults; And therefor balancing a game targeting both kids and adults using the preset static methods looks impossible.
+As far as the content and premise of the activity is inherently appealing to the audience, the design of the interactive experience, such as video games, boils down to keeping the user or the player in the flow zone throughout the activity. While playing a video game gradually increases player's skill level, the designer should increase the required skill level by changing the challenge level of the game at the same pace to keep the player in the flow zone. Though acquiring skills gradually happens differently in various individuals. In fact designing such a balance between the challenge and skill level becomes a greater and greater challenge for the designer as the size of the targeted audience grows. For example when designing a game for kids, this balance would have a wholly different rate of change than when designing it for adults; And therefor balancing a game targeting both kids and adults using the preset static methods looks impossible.
 
-%Flow in Games - And Everything Else.pdf
-p Concerning video games, different players have different skills and expect different challenges. Most games offer only a single narrow, static experience (the red line in Figure 2). It might keep the typical player in the Flow but will not be fun for the hard- core or even the novice player. For example, a simple action (such as moving a camera in a 3D space) might be frustrating for a casual gamer who has never played a 3D game. Even though the rest of the game might be something casual gamers enjoy in other 2D games, the frus- trating beginning is likely to turn them away. 
+\section{Dynamic Game Balancing vs. Static Game Balancing }
+
+Many video games offer only a simple narrow and static experience, which is shown with the red line in figure ~\ref{fig:flow-zone}. This statically preset path might keep the typical player in the flow zone but will not be fun for the hardcore or novice player ~\cite{chen2007flow}. For example simple skills for typical players such as walking in a 3D space and looking around by controlling the camera can be easily found new and quite cumbersome to many casual players who are only used to 2D side-scroller games. This frustrating introductory challenge combined with the main challenges of the game can totally turn the casual gamers turn away. One should note that frustration due to lack of skill during game play is not necessarily same as frustration caused by difficult game levels; In fact, Kiel pointed two kinds of frustration during games, the at-game-frustration and in-game-frustration. The first is due to lack of skill during game playing and the second in caused by difficult game levels ~\cite{gilleade2004using}.
 
 \img
 {Adapted flow zone}
@@ -48,47 +49,20 @@ p Concerning video games, different players have different skills and expect dif
 {flow-zone-adapted.pdf}
 {adapted-flow-zone}
 
-%olesen2008real
-p Computer game balance (or difficulty adjustment) is a crucial aspect of commercial game development. Currently, this is achieved either by predefined levels of game challenge — the player then decides which of those levels she will play against — or by techniques known as rubber-band artificial intelligence (AI) [1], mainly used in racing games. The first approach cannot incorporate the needs of all potential players of the game while the latter approach generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism that covers the player’s need for more challenging NPCs during play (i.e. in real-time).
+Addressing these game balancing issues, for many years, game designers aim to provide some customization, for example by letting players choose a difficulty level upfront or including progressive difficulty levels during gameplay, based on a player's performance; However more advanced methods that work in real-time are less common, most designers predefine levels of game challenge for players with different skill levels. The player then decides in which of those levels to play. Another approach to address this balance issue is by techniques known as rubber-band artificial intelligence (AI) ~\cite{champandard2003ai}: When falling behind, the player suddenly gets an enormous boost in speed, which allows for catching up again (and vice versa for the competing cars).
+
+%Time Balancing of Computer Games with Adaptive Time-Variant Minigames
+p A primary issue in competitive games is that the different teams or players should have equal chances to win the game based on rules and starting positions [20]. Balancing fairness can involve manipulations of different game elements – for example, the capabilities and initial resources allocated to player types such as Orcs and Humans in WarCraft [12]. This type of balancing (called `static balancing') is often carried out through repeated playtesting of the game mechanics and parameters [34], such as tuning the capabilities of individual weapons or units [20].  The idea of balancing a game dynamically during game play is not new [36]. Dynamic balancing, considers a fully continuous spectrum of play, from the starting point of the game to its end. Dynamic balancing differs from static balancing because the interaction of the player or players with the game should be considered, and different units and parameters in the game configuration should be adapted based on the current state of the game [37] rather than at the start of play based on player models. Variable frequency of enemies in Diablo 3 and variable power of enemies in Assassin's Creed 4: Black Flag [38] are examples of dynamic balancing during game play. 
 
 \img
-{Call of Duty, non-adaptive difficulty modes}
-{Menu content for difficulty selection, Call of Duty: World at War (Wii)}
-{cod-mw-difficulty.png}
+{Call of Duty, static difficulty modes}
+{Menu content for difficulty selection, Call of Duty: Modern Warfare (Wii)}
+{cod-4-mw-wii-select-difficulty.png}
 {cod-mw-difficulty}
 
-%Time Balancing of Computer Games with Adaptive Time-Variant Minigames
-\subsection{Game Balancing using Artificial Intelligence}
-p High quality game AI has become an important selling point of computer games in recent years [40]. However, game players often still prefer to play against human controlled opponents (via a network) rather than computer controlled ones [41]. Olesen has explored neuro-evolution methodologies to generate intelligent opponents in Real-Time Strategy (RTS) games and tried to adapt the challenge generated by the game opponents to match the skill of a player in real-time [42]. Several previous approaches focused on the game’s AI and probabilistic methods to address dynamic balancing. In Knock’Em [43], reinforcement learning techniques has been employed to build intelligent agents that adapt their behavior in order to provide dynamic game balancing. Hunicke [26] has explored a computational and design requirements for a dynamic difficulty adjustment system using probabilistic methods based on Half Life game engine [44]. 
+In recent years many high quality games to a large degree rely on high quality AI as an important selling point ~\cite{forbus2002ai}. Many research have been done on utilizing game AI to dynamically adjust the difficulty level. Xiang et al. in their work on dynamic difficulty adjustment by facial expression ~\cite{xiang2013dynamic} have employed Gaussian Mixture Module and multi variate pattern mining to model the player's reaction pattern ~\cite{lee2006dynamic, chiu2008using}. They have also controlled NPCs behaviors by reinforce learning algorithm ~\cite{spronck2004difficulty, andrade2005challenge}. Hunicke ~\cite{hunicke2004ai} used Hamlet system to predict when the player is repeatedly entering an undesirable loop, and help them get out of it, they have explored computational and design requirements for a dynamic difficulty adjustment system using probabilistic methods based on Half Life game engine. Joost ~\cite{westra2009adaptive} proposed an adaptation approach that uses expert knowledge for the adaptation. They used a game adaption model and organized agents to choose the most optimal task for the trainee, given the user model, the game flow and the capabilities of the agents. Hom ~\cite{hom2007automatic} used AI techniques to design balanced board games like checkers and Go by modifying the rules of the game, not just the rule parameters. Olesen has explored neuro-evolution methodologies to generate intelligent opponents in Real-Time Strategy (RTS) games and tried to adapt the challenge generated by the game opponents to match the skill of a player in real-time ~\cite{olesen2008real}.
 
-% Dynamic Difﬁculty Adjustment by Facial Expression.pdf
-p The other methods are to utilize game AI to dynamically adjust the difﬁculty level. Gaussian Mixture Module and multivariate pattern mining were used to model the player’s reaction pattern [21, 22]. NPCs behaviors are controlled by reinforce learning algorithm [6, 7]. They did not, however, change the game environment or adjust the difﬁculty of the game level during play. By conducting a cheap, abstract simulation of the player’s progression through state space, Hunicke [4] used Hamlet system to predict when the player is repeatedly entering an undesirable loop, and help them get out of it. Joost [23] proposed an adaptation approach that uses expert knowledge for the adaptation. They used a game adaption model and organized agents to choose the most optimal task for the trainee, given the user model, the game ﬂow and the capabilities of the agents. Hom [24] used AI techniques to design balanced board games like checkers and Go by modifying the rules of the game, not just the rule parameters.
-
-\section{Emotionally Adaptive Games}
-
-While adjusting the challenge level is crucial to every entertaining video game the appealing gameplay might strongly differ per individual. For example skill level differences between different players might make a difficulty level which is enjoyable by a novice, totally boring for an expert player.
-
-% Creating an Emotionally Adaptive Game.pdf
-p These relations strongly differ per individual, for example influenced by a player's skill level. For instance, a difficulty level that is found enjoyable by a novice might be boring for expert players. Games therefore need psychological customization techniques [4], such as difficulty adaptation, to optimize the experience. Since many years, game designers aim to provide some customization, for example by letting players choose a difficulty level upfront or including progressive difficulty levels during gameplay, based on a player's performance. More advanced methods that work in real-time are less common. One difficulty adaptation mechanism, frequently applied in racing games, is called rubber banding [5]: When falling behind, the player suddenly gets an enormous boost in speed, which allows for catching up again (and vice versa for the competing cars). However, game adaptation that is solely based on in-game behavior can only have limited success, because there are many different types of players [6]. Each type of player has his/her own goals, preferences and emotional responses when playing a game. Hence, for optimizing the players' experiences, successful psychological customization requires a game to take the emotional state of the player into account. Games should become emotionally adaptive (Fig. 1– right panel).
-
-\img
-{Emotionally adaptive games}
-{The emotionally adaptive game loop, inspired on the affective loop ~\cite{sundstrom2005user}.}
-{affective-game-system.pdf}
-{affective-game-system}
-
-% Creating an Emotionally Adaptive Game.pdf
-p The importance of emotions in computing is widely argued for (e.g. [8]). Emotion theorists differ over a discrete versus a dimensional model. The \"discretionists\" (e.g. [9]) argue for basic discrete emotions, such as anger, fear, sadness and happiness, as unique experiential states. The \"dimensionalists\" (e.g. [10]), on the other hand, look at emotions in terms of a two-dimensional space consisting of valence ("pleasantness") and arousal ("activation"). Sometimes dominance is added as a third dimension.  Effective human-computer interaction from an emotions perspective works in terms of an \"affective loop\" [7]. A similar feedback loop in a games context is described by [11]. Inspired by their work, Fig. 1 (right panel) shows a schematic view on the functioning of an emotionally adaptive game. By providing the right game mechanics [12] (e.g. audiovisuals, narrative, challenge), the game influences the player's experience, behavior and emotional state. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level)
-accordingly in real-time. This all is done to create the optimal experience (which is referred to in literature as e.g. flow [13] or immersion [14]). Previous research attempts to create emotionally adaptive software have mainly focused on tutoring systems and workload / performance optimization (see e.g. [15]). Fewer attempts have been made to incorporate a closed-loop mechanism in a games context. Takahashi et al. [16] and Rani et al. [17] created a game that was found to improve player performance by adapting difficulty level to player's physiological state. Concept validation claims of these both studies were, however, based on a limited number of participants. Besides these attempts, a number of biofeedback games have recently been developed, which have some integration of a player's physiological data into the game (e.g. [18], [19] and [20]). These games however focus on stress manipulation rather than optimization of gameplay experience. Probably closest to the present project's scope is the work of Saari and colleagues, who created the Mind-Based Technology framework for psychological customization [21]. They have further elaborated this in a games context (e.g. [4], [22]) and are currently developing an emotionally adaptive game demo. As a first step in creating an emotionally adaptive game, system input and output need to be specified in further detail. Regarding output (emotion-data), Saari et al. [22] provide an extensive discussion of possible elements to be adapted, structured by \"psychologically validated templates\". We have adopted a rather straightforward and intuitive \"template\": Game speed. We will manipulate the game's speed to influence the player's emotional state (the interplay between boredom, frustration and enjoyment, Fig. 1-left panel). Regarding system input (emotion-data), Öhman [23] distinguished three categories of emotion measures: Self-reports, overt behavior and physiological responses. Self-reports are frequently used for assessing players' emotions and experiences [5] but not suitable (since too obtrusive) for real-time application in a game. Regarding overt behavior, potentially useful techniques for measuring boredom, frustration and enjoyment are facial emotion tracking [24] and the analysis of posture and pressure exerted on the game controls [25]. Regarding physiological responses, there is an extensive field with many research findings in psychophysiology. Although the research is done in varying contexts with sometimes contradicting results, it is considered a highly interesting field for analyzing emotions in games. We have limited ourselves to the methods described below. Regarding cardiovascular (heart) activity, tonic (long-term, as opposed to phasic) heart rate (HR) is known to increase with sympathetic nervous system activity, such as emotional arousal and cognitive effort and stress. On the other hand, increases in attention (mediated in the parasympathetic nervous system) lead to a decreased heart rate [26]. [27] found HR features to correlate with self-reported fun in games. Heart rate variability (HRV) is considered an index for mental effort (e.g. [28]). Some researchers (e.g. [29]) consider the percentage power in the low-frequency (LF) 0.070.14 Hz range as a particularly effective index for task-related mental effort / sympathetic activity. Respiratory responses are analyzed to control for respiratory artifacts in e.g. HRV (a phenomenon known as respiratory sinus arrhythmia). Respiration may, however, also be used as a measure itself, e.g. for investigating stress and mental load [30]. Electrodermal activity (EDA) concerns the electrical resistance of the skin, also known as Skin Conductance (SCL, SCR) or Galvanic Skin Response (GSR). Skin conductance level is known to increase with information processing and the frequency of non-specific skin responses increases with arousal [26]. Electromyography (EMG) is a technique for measuring muscle activity; electric potential is being generated when muscle cells contract. Facial EMG is frequently used as a metric for valence. The most frequently analyzed facial muscles in this context are the orbicularis oculi (OO, used for closing the eyelids), zygomaticus major (ZYG, smiling) and corrugator supercilii (CORR, frowning). Most studies find positive correlations between valence and the OO and ZYG muscles, and a negative correlation between valence and CORR muscle (see e.g. [31], [32], [33]). In addition to the above findings, there are also a considerable number of studies without significant findings [34]. Because of the large differences in physiological responses between individuals and within individuals over time (autonomic response stereotypy principle, see e.g. [15], [35]), some researchers (e.g. [36]) argue for normalizing physiological data to facilitate a group analysis of the data. Additionally, affective systems should employ a battery of physiological features for accurate emotion predictions (e.g. [37]), and should allow for user-control for the sake of autonomy, privacy and interpretation of the data [41]. Because of the context-dependency of physiological responses, a two-stage approach was adopted. The purpose of the current initial study is to investigate physiological and other affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is not yet closed, that is, real-time affective indicators are not yet directly influencing the game mechanics. This will be the purpose of phase 2 of our work. The research question for the current invesigation evolved around the components of our framework (Fig. 1 - right panel): What game mechanics (speed settings) lead to what kind of emotional state, and what emotion-data is this accompanied by? This was investigated by means of a controlled experiment, as explained in the next section.
-% Creating an Emotionally Adaptive Game.pdf
-
-
-%Time Balancing of Computer Games with Adaptive Time-Variant Minigames
-\subsection{Dynamic Game Balancing vs. Static Game Balancing }
-p A primary issue in competitive games is that the different teams or players should have equal chances to win the game based on rules and starting positions [20]. Balancing fairness can involve manipulations of different game elements – for example, the capabilities and initial resources allocated to player types such as Orcs and Humans in WarCraft [12]. This type of balancing (called ‘static balancing’) is often carried out through repeated playtesting of the game mechanics and parameters [34], such as tuning the capabilities of individual weapons or units [20].  The idea of balancing a game dynamically during game play is not new [36]. Dynamic balancing, considers a fully continuous spectrum of play, from the starting point of the game to its end. Dynamic balancing differs from static balancing because the interaction of the player or players with the game should be considered, and different units and parameters in the game configuration should be adapted based on the current state of the game [37] rather than at the start of play based on player models. Variable frequency of enemies in Diablo 3 and variable power of enemies in Assassin’s Creed 4: Black Flag [38] are examples of dynamic balancing during game play. 
-
-
-
+Addressing the game balance problem using predefined levels obviously cannot incorporate the needs of all potential players of the game while merely using player's in-game generated data and employing artificial intelligence sometimes generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism that covers the player's need for more challenging NPCs during play ~\cite{olesen2008real}. We should also mention, with all development on AI in computer games, game players often still find playing against human controlled opponents (via a network) more interesting rather than computer controlled ones ~\cite{weibel2008playing}.
 
 \section{Emotionally Adaptive Games}
 %%% talk about works has been done in this area and different approaches
@@ -99,10 +73,23 @@ p A primary issue in competitive games is that the different teams or players sh
 %%% adapting play technologies by changing Player, NPC, Environment parameters.
 %%% getting challenged and physiological signals, the importance of GSR
 
+While adjusting the challenge level is crucial to every entertaining video game the appealing gameplay might strongly differ per individual. For example skill level differences between different players might make a difficulty level which is enjoyable by a novice, totally boring for an expert player; Games therefore need psychological customization techniques ~\cite{saari2005towards}. Game adaptation that is solely based on in-game performance can only have limited success, because there are many different types of players ~\cite{onlin2014bartle}. Each type of player has his/her own goals, preferences and emotional responses when playing a game. Hence, for optimizing the players' experiences, successful psychological customization requires a game to take the emotional state of the player into account. Games should become emotionally adaptive (Figure ~\ref{fig:affective-game-system}) ~\cite{tijs2009creating}.
+
+\img
+{Emotionally adaptive games}
+{The emotionally adaptive game loop, inspired on the affective loop ~\cite{sundstrom2005user}.}
+{affective-game-system.pdf}
+{affective-game-system}
+
+
+% Creating an Emotionally Adaptive Game.pdf
+p The importance of emotions in computing is widely argued for (e.g. [8]). Emotion theorists differ over a discrete versus a dimensional model. The \"discretionists\" (e.g. [9]) argue for basic discrete emotions, such as anger, fear, sadness and happiness, as unique experiential states. The \"dimensionalists\" (e.g. [10]), on the other hand, look at emotions in terms of a two-dimensional space consisting of valence ("pleasantness") and arousal ("activation"). Sometimes dominance is added as a third dimension.  Effective human-computer interaction from an emotions perspective works in terms of an \"affective loop\" [7]. A similar feedback loop in a games context is described by [11]. Inspired by their work, Fig. 1 (right panel) shows a schematic view on the functioning of an emotionally adaptive game. By providing the right game mechanics [12] (e.g. audiovisuals, narrative, challenge), the game influences the player's experience, behavior and emotional state. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level)
+accordingly in real-time. This all is done to create the optimal experience (which is referred to in literature as e.g. flow [13] or immersion [14]). Previous research attempts to create emotionally adaptive software have mainly focused on tutoring systems and workload / performance optimization (see e.g. [15]). Fewer attempts have been made to incorporate a closed-loop mechanism in a games context. Takahashi et al. [16] and Rani et al. [17] created a game that was found to improve player performance by adapting difficulty level to player's physiological state. Concept validation claims of these both studies were, however, based on a limited number of participants. Besides these attempts, a number of biofeedback games have recently been developed, which have some integration of a player's physiological data into the game (e.g. [18], [19] and [20]). These games however focus on stress manipulation rather than optimization of gameplay experience. Probably closest to the present project's scope is the work of Saari and colleagues, who created the Mind-Based Technology framework for psychological customization [21]. They have further elaborated this in a games context (e.g. [4], [22]) and are currently developing an emotionally adaptive game demo. As a first step in creating an emotionally adaptive game, system input and output need to be specified in further detail. Regarding output (emotion-data), Saari et al. [22] provide an extensive discussion of possible elements to be adapted, structured by \"psychologically validated templates\". We have adopted a rather straightforward and intuitive \"template\": Game speed. We will manipulate the game's speed to influence the player's emotional state (the interplay between boredom, frustration and enjoyment, Fig. 1-left panel). Regarding system input (emotion-data), Öhman [23] distinguished three categories of emotion measures: Self-reports, overt behavior and physiological responses. Self-reports are frequently used for assessing players' emotions and experiences [5] but not suitable (since too obtrusive) for real-time application in a game. Regarding overt behavior, potentially useful techniques for measuring boredom, frustration and enjoyment are facial emotion tracking [24] and the analysis of posture and pressure exerted on the game controls [25]. Regarding physiological responses, there is an extensive field with many research findings in psychophysiology. Although the research is done in varying contexts with sometimes contradicting results, it is considered a highly interesting field for analyzing emotions in games. We have limited ourselves to the methods described below. Regarding cardiovascular (heart) activity, tonic (long-term, as opposed to phasic) heart rate (HR) is known to increase with sympathetic nervous system activity, such as emotional arousal and cognitive effort and stress. On the other hand, increases in attention (mediated in the parasympathetic nervous system) lead to a decreased heart rate [26]. [27] found HR features to correlate with self-reported fun in games. Heart rate variability (HRV) is considered an index for mental effort (e.g. [28]). Some researchers (e.g. [29]) consider the percentage power in the low-frequency (LF) 0.070.14 Hz range as a particularly effective index for task-related mental effort / sympathetic activity. Respiratory responses are analyzed to control for respiratory artifacts in e.g. HRV (a phenomenon known as respiratory sinus arrhythmia). Respiration may, however, also be used as a measure itself, e.g. for investigating stress and mental load [30]. Electrodermal activity (EDA) concerns the electrical resistance of the skin, also known as Skin Conductance (SCL, SCR) or Galvanic Skin Response (GSR). Skin conductance level is known to increase with information processing and the frequency of non-specific skin responses increases with arousal [26]. Electromyography (EMG) is a technique for measuring muscle activity; electric potential is being generated when muscle cells contract. Facial EMG is frequently used as a metric for valence. The most frequently analyzed facial muscles in this context are the orbicularis oculi (OO, used for closing the eyelids), zygomaticus major (ZYG, smiling) and corrugator supercilii (CORR, frowning). Most studies find positive correlations between valence and the OO and ZYG muscles, and a negative correlation between valence and CORR muscle (see e.g. [31], [32], [33]). In addition to the above findings, there are also a considerable number of studies without significant findings [34]. Because of the large differences in physiological responses between individuals and within individuals over time (autonomic response stereotypy principle, see e.g. [15], [35]), some researchers (e.g. [36]) argue for normalizing physiological data to facilitate a group analysis of the data. Additionally, affective systems should employ a battery of physiological features for accurate emotion predictions (e.g. [37]), and should allow for user-control for the sake of autonomy, privacy and interpretation of the data [41]. Because of the context-dependency of physiological responses, a two-stage approach was adopted. The purpose of the current initial study is to investigate physiological and other affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is not yet closed, that is, real-time affective indicators are not yet directly influencing the game mechanics. This will be the purpose of phase 2 of our work. The research question for the current invesigation evolved around the components of our framework (Fig. 1 - right panel): What game mechanics (speed settings) lead to what kind of emotional state, and what emotion-data is this accompanied by? This was investigated by means of a controlled experiment, as explained in the next section.
+% Creating an Emotionally Adaptive Game.pdf
+
 %% TODO:paraphrase
 p The Affective Gaming concept was first introduced by Wehrenberg, Charles through using Biofeedback to control a game based on relaxation level, it was the earliest research for correlating a game with biofeedback and after years of research the project was first implemented in 1984 for apple II computers, and the test results proved that human arousal level can actually be measured through GSR and used to control a game  ~\cite{wehrenberg1995willball}.
 %% TODO:paraphrase
-
 
 % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
 p Emotionally adapted gaming can be seen as based on gaming templates which are parts of the meta-narrative of the game. Hence, a basic approach to an element to be adapted inside a game is a psychologically validated template which creates a particular psychological effect. A broad view of templates may be that the whole game consists of a database of psychologically validated templates that are dynamically presented by the gaming engine in sequences during gameplay. A limited view entails that a smaller collection of templates is used. The element of psychological evaluation means that the selected psychological influence (such an emotional response) of the template on a particular type of user is sufficiently predictable. These psychologically evaluated templates may consist of i) manipulating 
